libnm-util: return empty hash, not NULL in nm_setting_to_hash() (bgo #740681)

The function was changed to return NULL instead of empty hash by commit
ad56cfa914d6a0f49b51e917ce89001f19c72d9f. Later, the condition had to be
relaxed for NMSettingGeneric (commit 4d32618264d7ca169036347a25f38689cce632f3).
Unforfunately, it shows up that there are other use cases that require
presence of a setting (that might have all properties default), such as
NMSettingBridgePort for bridge slave connections.

libnm already behaves this way, since commit
6325c596c093e34d290604e2ef24219427a1078d.

https://bugzilla.gnome.org/show_bug.cgi?id=740681